--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Update NI
+    - name: Poll & Transform
       run: |
         cd src && python3 main.py
     - name: Set variable to check if anything changed
