--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         git add data
         git commit -m "Update for $(date +'%Y-%m-%d')"
     - name: Push changes
-      if: steps.decide_variable.outputs.changed != 0
+      if: steps.is_updated.outputs.changed != 0
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
