Fix workflow dependency (version change)

--- a/.github/workflows/cases_by_specimen.yml
+++ b/.github/workflows/cases_by_specimen.yml
@@ -34,6 +34,6 @@ jobs:
         git commit -m "Update cases_by_specimen for $(date +'%Y-%m-%d')"
     - name: Push changes
       if: steps.is_updated.outputs.changed != 0
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
